--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1 id="title">TP Node.js</h1>
   <p class="lagrande">Ma page d'accueil</p>
+  <script src="jquery-2.1.1.js"></script>
 </body>
 </html>
