--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body>
   <h1 id="title">TP Node.js</h1>
-  <p class="lagrande">Ma page d'accueil</p>
+  <div>
+    <p class="lagrande">Ma page d'accueil</p>
+    <button id="toggleBtn">Afficher/masquer</button>
+    <button id="cssBtn">Modifier couleur de fond</button>
+  </div>
   <script src="jquery-2.1.1.js"></script>
+  <script src="monscript.js"></script>
 </body>
 </html>
