--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
   <h1 id="title">TP Node.js</h1>
+  <strong id="noscript">Attention le javascript est nécessaire pour cette page, veuillez l'activer dans votre navigateur.</strong>
+  <noscript>
+    <strong>Attention le javascript est nécessaire pour cette page, veuillez l'activer dans votre navigateur.</strong>
+  </noscript>
   <div>
     <p class="lagrande">Ma page d'accueil</p>
     <button id="toggleBtn">Afficher/masquer</button>
